--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html,
 }
 
 .containers {
-  position: relative;
+  /*position: relative;*/
   width: 100%;
   overflow: hidden;
   padding-top: 100%; /* 1:1 Aspect Ratio */
